add stylesheet and about.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>My Portfolio - RJSM</title>
+    <link rel="stylesheet" href="css/styles.css"> <!-- EXTERNAL STYLESHEET -->
+
+    <!-- EXTERNAL STYLES RESOURCES -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap" rel="stylesheet">
 </head>
-    <body>
+    <body class="customName">
     <!-- Header -->
-        <h1></h1>
+        <header>
+            <div class="header">
+                <h1 class="navLogo">PortFolio.</h1>
+                <ul class="nav">
+                    <li class="nav">Home</li>
+                    <li class="nav">About</li>
+                    <li class="nav">Portfolio</li>
+                    <li class="nav">Contact</li>
+                </ul>
+            </div>
+        </header>
     <!-- About -->
 
     <!-- Portfolio -->
