do universal reset

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio - RJSM</title>
-    <link rel="stylesheet" href="css/styles.css"> <!-- EXTERNAL STYLESHEET -->
+
+    <!-- EXTERNAL STYLESHEET -->
+    <link rel="stylesheet" href="css/styles.css"> 
 
     <!-- EXTERNAL STYLES RESOURCES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap" rel="stylesheet">
+
+    <!-- EMBEDDED STYLESHEET -->
+    <style>
+        body {
+            background-color: #9DB2BF;
+        }
+    </style>
 </head>
     <body class="customName">
     <!-- Header -->
