update index and css file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio - RJSM</title>
 
     <!-- EXTERNAL STYLESHEET -->
-    <link rel="stylesheet" href="css/styles.css"> 
+    <link rel="stylesheet" href="css/styles2.css"> 
 
     <!-- EXTERNAL STYLES RESOURCES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,25 +14,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap" rel="stylesheet">
 
     <!-- EMBEDDED STYLESHEET -->
-    <style>
+    <!-- <style>
         body {
             background-color: #9DB2BF;
         }
-    </style>
+    </style> -->
+
 </head>
-    <body class="customName">
+    <body>
+        
     <!-- Header -->
         <header>
             <div class="header">
-                <h1 class="navLogo">PortFolio.</h1>
-                <ul class="nav">
-                    <li class="nav">Home</li>
-                    <li class="nav">About</li>
-                    <li class="nav">Portfolio</li>
-                    <li class="nav">Contact</li>
+                <nav class="navBar">
+                <ul>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/portfolio.html">Portfolio</a></li>
+                    <li><a href="/about.html">About</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li class="logo"><h1 class="logoHead">Portfolio&dot;</h1></li>
                 </ul>
+                </nav>
+            </div>
+            <div class="header_headings">
+                <h1>RYAN JAY STA. MARIA</h1>
+                <h2>Freelance Front-End Web Developer</h2>
             </div>
         </header>
+        
     <!-- About -->
 
     <!-- Portfolio -->
