--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio - RJSM</title>
 
     <!-- EXTERNAL STYLESHEET -->
-    <link rel="stylesheet" href="css/styles.css"> 
+    <link rel="stylesheet" href="../css/styles.css"> 
 
     <!-- EXTERNAL STYLES RESOURCES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
