--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My Portfolio - RJSM</title>
 
     <!-- EXTERNAL STYLES RESOURCES-->
+    
     <!-- EXTERNAL STYLESHEET -->
     <link rel="stylesheet" href="../css/styles.css"> 
 
@@ -60,20 +61,29 @@
 
     <!-- About -->
 
+    <section>
+        <div class="about">
+            <div class="about__headings">
+                <h2 class="about__heading--h2">ABOUT ME</h2>
+                <p class="about__heading--p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi soluta odio blanditiis debitis labore eaque esse aperiam illo, non praesentium rerum dolore tempore ipsum assumenda nisi ea. Error, ex. Unde.
+                    Nam aut delectus velit vero dolor voluptate vel, minima obcaecati cumque laudantium inventore, aliquam quidem corporis error sit. Veritatis, porro. Expedita fuga dignissimos ipsam ullam labore facilis praesentium quibusdam laboriosam.
+                    Voluptatum quis id maiores iure assumenda reprehenderit magnam ipsa sapiente? Unde ad repudiandae voluptatum reiciendis impedit nostrum, totam id molestiae quae laboriosam error praesentium omnis explicabo minus maxime minima. Sunt?
+                    Illum ab vitae eveniet sunt quidem quod tempora quia at inventore error aut, impedit natus quisquam placeat itaque expedita doloremque non cupiditate quis eaque aperiam doloribus, magnam assumenda enim! Asperiores.
+                    Provident, nulla accusantium unde accusamus eius beatae at, expedita consectetur ea iusto iure veritatis totam, modi aliquid fugit nemo! Reiciendis, assumenda. 
+                </p>
+            </div>
+        </div>
+
+    </section>
+
     <!-- Portfolio -->
 
     <!-- Contact  -->
 
     <!-- Footer  -->
-<<<<<<< HEAD
 
 
 
 </body>
 
 </html>
-=======
-  
-    </body>
-</html>
->>>>>>> 693e563bed74063b5c5089a29312711108831665
