update some css styling and html contents

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header>
         <div class="header">
             <nav class="header__nav">
-                <a href="#" class="header__brand">PORT<span class="header__brand-span">FOLIO&dot;</span></a>
+                <a href="#" class="header__brand">PORT<span class="header__brand-span">FOLIO</span>&dot;</a>
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
@@ -66,10 +66,7 @@
             <div class="about__headings">
                 <h2 class="about__heading--h2">ABOUT ME</h2>
                 <p class="about__heading--p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi soluta odio blanditiis debitis labore eaque esse aperiam illo, non praesentium rerum dolore tempore ipsum assumenda nisi ea. Error, ex. Unde.
-                    Nam aut delectus velit vero dolor voluptate vel, minima obcaecati cumque laudantium inventore, aliquam quidem corporis error sit. Veritatis, porro. Expedita fuga dignissimos ipsam ullam labore facilis praesentium quibusdam laboriosam.
-                    Voluptatum quis id maiores iure assumenda reprehenderit magnam ipsa sapiente? Unde ad repudiandae voluptatum reiciendis impedit nostrum, totam id molestiae quae laboriosam error praesentium omnis explicabo minus maxime minima. Sunt?
-                    Illum ab vitae eveniet sunt quidem quod tempora quia at inventore error aut, impedit natus quisquam placeat itaque expedita doloremque non cupiditate quis eaque aperiam doloribus, magnam assumenda enim! Asperiores.
-                    Provident, nulla accusantium unde accusamus eius beatae at, expedita consectetur ea iusto iure veritatis totam, modi aliquid fugit nemo! Reiciendis, assumenda. 
+                    Nam aut delectus velit vero dolor voluptate vel, minima obcaecati cumque laudantium inventore, aliquam quidem corporis error sit. Veritatis, porro.
                 </p>
             </div>
         </div>
