add icons for portfolio page

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <!-- EXTERNAL STYLES RESOURCES -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap" rel="stylesheet">
 
     <!-- CUSTOM STYLES  -->
     
@@ -64,6 +64,20 @@
     </section>
 
     <!-- Portfolio Section -->
+
+    <section>
+        <div class="portfolio">
+            <h2 class="portfolio__heading--h2">MY PORTFOLIO</h2>
+                <div class="portfolio__container">
+                    <div class="portfolio__img"><img src="https://github.com/KodeGoBootcamp-Projects/PF-Exercise_Images/blob/main/html.png?raw=true" alt="HTML5 Logo"></div>
+                    <div class="portfolio__img"><img src="https://github.com/KodeGoBootcamp-Projects/PF-Exercise_Images/blob/main/css.png?raw=true" alt="CSS3 Logo"></div>
+                    <div class="portfolio__img"><img src="https://github.com/KodeGoBootcamp-Projects/PF-Exercise_Images/blob/main/java-script.png?raw=true" alt="JS Logo"></div>
+                </div>
+                <p class="portfolio__heading--p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi soluta odio blanditiis debitis labore eaque esse aperiam illo, non praesentium rerum dolore tempore ipsum assumenda nisi ea. Error, ex. Unde.
+                    Nam aut delectus velit vero dolor voluptate vel, minima obcaecati cumque laudantium inventore, aliquam quidem corporis error sit. Veritatis, porro. </p>
+        </div>
+
+    </section>
 
 
     <!-- Contact Section -->
