update color palette and add portfolio page and icons

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
                     <div class="portfolio__img"><img src="https://github.com/KodeGoBootcamp-Projects/PF-Exercise_Images/blob/main/java-script.png?raw=true" alt="JS Logo"></div>
                 </div>
                 <p class="portfolio__heading--p">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi soluta odio blanditiis debitis labore eaque esse aperiam illo, non praesentium rerum dolore tempore ipsum assumenda nisi ea. Error, ex. Unde.
-                    Nam aut delectus velit vero dolor voluptate vel, minima obcaecati cumque laudantium inventore, aliquam quidem corporis error sit. Veritatis, porro. </p>
+                    Nam aut delectus velit vero dolor voluptate vel, minima obcaecati cumque laudantium inventore, aliquam quidem corporis error sit. Veritatis, porro. 
+                </p>
+                <a class="portfolio__btn" href="">See More</a>
         </div>
-
     </section>
 
 
