add fontawesome resource and some icons

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;800&display=swap" rel="stylesheet">
 
+    <!-- FONTAWESOME RESOURCE SCRIPT -->
+    <script src="https://kit.fontawesome.com/82fac282cd.js" crossorigin="anonymous"></script>
+
     <!-- CUSTOM STYLES  -->
     
     <!-- EMBEDDED STYLESHEET -->
@@ -82,6 +85,25 @@
 
 
     <!-- Contact Section -->
+
+    <section>
+        <div class="contact">
+            <div class="contact__container">
+                <div class="contact__row">
+                    <div class="contact__row-left">
+                        <h2>Contact Me</h2>
+                        <p><i class="fa-solid fa-envelope fa-xl" style="color: #ffffff;"></i>juandelacruz01@gmail.com</p>
+                        <p><i class="fa-solid fa-phone fa-xl" style="color: #ffffff;"></i>+ 639 912 345 6789</p>
+                        <div class="contact__left--icons">
+                                <a href="#"><i class="fa-brands fa-facebook fa-2xl" style="color: #ffffff;"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin fa-2xl" style="color: #ffffff;"></i></a>
+                        </div>
+                    </div>
+                    <div class="contact__row-right"></div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Footer Section -->
