--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
 <body>
 
+
     <!-- Header Section -->
 
     <header>
@@ -53,6 +54,7 @@
         </div>
     </header>
 
+
     <!-- About Section -->
 
     <section>
@@ -65,6 +67,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- Portfolio Section -->
 
@@ -91,15 +94,23 @@
             <div class="contact__container">
                 <div class="contact__row">
                     <div class="contact__row-left">
-                        <h2>Contact Me</h2>
-                        <p><i class="fa-solid fa-envelope fa-xl" style="color: #ffffff;"></i>juandelacruz01@gmail.com</p>
-                        <p><i class="fa-solid fa-phone fa-xl" style="color: #ffffff;"></i>+ 639 912 345 6789</p>
+                        <h2 class="contact__heading--h2">Contact Me</h2>
+                        <p><i class="fa-solid fa-envelope fa-xl"></i>juandelacruz01@gmail.com</p>
+                        <p><i class="fa-solid fa-phone fa-xl"></i>+ 639 912 345 6789</p>
                         <div class="contact__left--icons">
-                                <a href="#"><i class="fa-brands fa-facebook fa-2xl" style="color: #ffffff;"></i></a>
-                                <a href="#"><i class="fa-brands fa-linkedin fa-2xl" style="color: #ffffff;"></i></a>
+                                <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
+                        <a href="downloads/sample.pdf" download class="contact__btn contact__btn-1">Download CV</a>
                     </div>
-                    <div class="contact__row-right"></div>
+                    <div class="contact__row-right">
+                        <form action="">
+                            <input type="text" placeholder="Your Name">
+                            <input type="email" placeholder="Your Email">
+                            <textarea name="#" id="#" cols="30" rows="10" placeholder="Your Message"></textarea>
+
+                        </form>
+                    </div>
                 </div>
             </div>
         </div>
