update index and css file

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                         <p><i class="fa-solid fa-phone fa-xl"></i>+ 639 912 345 6789</p>
                         <div class="contact__left--icons">
                                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                                <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                <a href="#"><i class="fa-brands fa-instagram"></i></a>
                                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                         </div>
                         <a href="downloads/sample.pdf" download class="contact__btn contact__btn-1">Download CV</a>
