add teashop link

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="portfolio">
             <h2 class="portfolio__heading--h2">MY PORTFOLIO</h2>
                 <div class="portfolio__container">
-                    <div class="portfolio__img"><img src="https://github.com/KodeGoBootcamp-Projects/PF-Exercise_Images/blob/main/html.png?raw=true" alt="HTML5 Logo"></div>
+                    <div class="portfolio__img"><a href="https://64ba73c980b7820c9d3bdfa5--bright-kleicha-6259fd.netlify.app/" target="_blank"><img src="images/teaShop.webp" alt="Teashop Website"></a></div>
                     <div class="portfolio__img"><img src="https://github.com/KodeGoBootcamp-Projects/PF-Exercise_Images/blob/main/css.png?raw=true" alt="CSS3 Logo"></div>
                     <div class="portfolio__img"><img src="https://github.com/KodeGoBootcamp-Projects/PF-Exercise_Images/blob/main/java-script.png?raw=true" alt="JS Logo"></div>
                 </div>
